# Papers-To-Precision-Building-Biomedical-Knowledge-at-Scale

./: .gitignore  From-Papers-to-Precision-Building-Biomedical-Intelligence-at-Scale.pptx  README.md  Workshop.ipynb  pyproject.toml  requirements.txt
configs/: default.yaml  env.example
docs/: architecture.md  g_retriever.md  graphsage.md
src/biograph/: __init__.py  config.py  llm.py  pipeline.py  schema.py
src/biograph/analytics/: __init__.py  inferences.py
src/biograph/cli/: __init__.py  run_gretriever.py  run_pipeline.py  train_graphsage.py
src/biograph/embeddings/: __init__.py  demos.py  encoders.py
src/biograph/extraction/: __init__.py  entity_resolution.py  gliner_extractor.py
src/biograph/graph/: __init__.py  knowledge_graph.py  kuzu_store.py  neo4j_store.py
src/biograph/ingestion/: __init__.py  pubmed.py  sample_data.py
src/biograph/models/: __init__.py  graphsage.py  pyg_export.py
src/biograph/retrieval/: __init__.py  g_retriever.py  hybrid_rag.py
src/biograph/viz/: __init__.py  pyvis_graph.py
tests/: test_smoke.py
